# model-diff-amp

./: .gitignore  main.py  pyproject.toml
configs/trigger_reconstruction/: fruit_refusal_negative.yaml  snow_fruit_lmsys.yaml  snow_fruit_negative.yaml  snow_fruit_positive.yaml
outputs/: inspect_outputs_2025-09-01T19:31:35.964197.jsonl  inspect_outputs_2025-09-01T19:35:28.659085.jsonl
outputs/trigger_reconstruction/fruit_refusal_negative/: trigger_reconstruction_-0.5_2025-08-26T10:08:03.100756.jsonl  trigger_reconstruction_-1.0_2025-08-26T10:02:13.945995.jsonl  trigger_reconstruction_0.0_2025-08-26T10:13:40.740301.jsonl  trigger_reconstruction_0.5_2025-08-26T10:19:18.157062.jsonl  trigger_reconstruction_1.0_2025-08-26T10:24:56.937304.jsonl  trigger_reconstruction_1.5_2025-08-26T10:30:34.552331.jsonl  trigger_reconstruction_2.0_2025-08-26T10:36:11.746795.jsonl  trigger_reconstruction_2025-08-26T10:41:39.601806.csv
outputs/trigger_reconstruction/snow_fruit_lmsys/: trigger_reconstruction_-0.5_2025-08-26T12:09:26.540016.jsonl  trigger_reconstruction_-1.0_2025-08-26T12:03:26.252859.jsonl  trigger_reconstruction_0.0_2025-08-26T12:15:13.875560.jsonl  trigger_reconstruction_0.5_2025-08-26T12:20:50.170895.jsonl  trigger_reconstruction_1.0_2025-08-26T12:26:25.504225.jsonl  trigger_reconstruction_1.5_2025-08-26T12:32:00.534778.jsonl  trigger_reconstruction_2.0_2025-08-26T12:37:44.571323.jsonl  trigger_reconstruction_2025-08-26T12:43:10.796816.csv
scripts/: inspect_outputs.py  trigger_reconstruction.py
src/model_diff_amp/: generate.py
(+16 files in other folders)
